--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         sudo apt-get install python3-pip
-        pip install git+git://github.com/executablebookproject/cli.git#egg=master
+        pip install jupyter-book
         pip install ghp-import
         PATH="${PATH}:${HOME}/.local/bin"
 
