--- a/content/_config.yml
+++ b/content/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: Tutorial on Computational Astrophysics
-author: Michael Zingale
+author: <a href="https://zingale.github.io">Michael Zingale</a>
 #logo: logo.png
 copyright: "2021"
 
@@ -27,3 +27,11 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+  extra_footer: |
+    <p>
+    &copy; 2021; CC-BY-NC-SA 4.0
+    <p>
+
+sphinx:
+  config:
+    html_show_copyright: false
