--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         sudo apt-get install python3-pip
-        pip install jupyter-book
+        pip install -r requirements.txt
         pip install ghp-import
         PATH="${PATH}:${HOME}/.local/bin"
 
