--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -2,6 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 #
 - file: intro
-- file: floating-point
+- file: 01-floating-point
   sections:
-    - file: numerical_error
+    - file: 01-numerical_error
+- file: 02-diff-int
