--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -2,19 +2,19 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 #
 - file: intro
-- file: 01-floating-point
+- file: 01-floating-point/01-floating-point
   sections:
-    - file: 01-numerical_error
-- file: 02-diff-int
+    - file: 01-floating-point/01-numerical_error
+- file: 02-diff-int/02-diff-int
   sections:
-    - file: 02-differentiation
-    - file: 02-integration
-    - file: 02-exercises
-- file: 03-root-finding
-- file: 04-ODEs
+    - file: 02-diff-int/02-differentiation
+    - file: 02-diff-int/02-integration
+    - file: 02-diff-int/02-exercises
+- file: 03-roots/03-root-finding
+- file: 04-ODEs/04-ODEs
   sections:
-    - file: 04-ODEs-partI
-    - file: 04-ODEs-partII
-    - file: 04-exercises
+    - file: 04-ODEs/04-ODEs-partI
+    - file: 04-ODEs/04-ODEs-partII
+    - file: 04-ODEs/04-exercises
 
 
