--- a/content/_config.yml
+++ b/content/_config.yml
@@ -39,3 +39,11 @@ sphinx:
 launch_buttons:
    binderhub_url: "https://mybinder.org"
    colab_url: "https://colab.research.google.com"
+
+
+parse:
+  myst_enable_extensions:
+    # don't forget to list any other extensions you want enabled,
+    # including those that are enabled by default!
+    - amsmath
+    - dollarmath
