add an exercise

--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -28,6 +28,9 @@
     - file: 05-advection/05-advection-partIII
 
 - file: 06-burgers/06-burgers
+  sections:
+    - file: 06-advection/06-burgers-methods
+    - file: 06-advection/06-exercises
 
 - file: 07-euler/euler.md
 
