--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -1,43 +1,33 @@
-# Table of content
-# Learn more at https://jupyterbook.org/customize/toc.html
-#
-- file: intro
-
+format: jb-book
+root: intro
+chapters:
 - file: 01-floating-point/01-floating-point
   sections:
-    - file: 01-floating-point/01-numerical_error
-
+  - file: 01-floating-point/01-numerical_error
 - file: 02-diff-int/02-diff-int
   sections:
-    - file: 02-diff-int/02-differentiation
-    - file: 02-diff-int/02-integration
-    - file: 02-diff-int/02-exercises
-
+  - file: 02-diff-int/02-differentiation
+  - file: 02-diff-int/02-integration
+  - file: 02-diff-int/02-exercises
 - file: 03-roots/03-root-finding
-
 - file: 04-ODEs/04-ODEs
   sections:
-    - file: 04-ODEs/04-ODEs-partI
-    - file: 04-ODEs/04-ODEs-partII
-    - file: 04-ODEs/04-exercises
-
+  - file: 04-ODEs/04-ODEs-partI
+  - file: 04-ODEs/04-ODEs-partII
+  - file: 04-ODEs/04-exercises
 - file: 05-advection/05-advection
   sections:
-    - file: 05-advection/05-advection-partI
-    - file: 05-advection/05-advection-partII
-    - file: 05-advection/05-advection-partIII
-
+  - file: 05-advection/05-advection-partI
+  - file: 05-advection/05-advection-partII
+  - file: 05-advection/05-advection-partIII
 - file: 06-burgers/06-burgers
   sections:
-    - file: 06-burgers/06-burgers-methods
-    - file: 06-burgers/06-exercises
-
-- file: 07-euler/euler.md
+  - file: 06-burgers/06-burgers-methods
+  - file: 06-burgers/06-exercises
+- file: 07-euler/euler
   sections:
-    - file: 07-euler/07-euler-eigen
-    - file: 07-euler/07-euler-riemann
-    - file: 07-euler/07-euler-riemann-sampling
-    - file: 07-euler/07-euler-solver
-
-
+  - file: 07-euler/07-euler-eigen
+  - file: 07-euler/07-euler-riemann
+  - file: 07-euler/07-euler-riemann-sampling
+  - file: 07-euler/07-euler-solver
 - file: projects/projects.md
