--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -44,5 +44,6 @@ parts:
       sections:
       - file: reaction_networks/ODEs-implicit
       - file: reaction_networks/ODEs-implicit-systems
+      - file: reaction_networks/ODEs-implicit-nonlinear-systems
 
     
