--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -52,3 +52,4 @@ parts:
     - file: elliptic_multigrid/elliptic-problems.ipynb
     - file: elliptic_multigrid/elliptic-relaxation.ipynb
     - file: elliptic_multigrid/elliptic-residual.ipynb
+    - file: elliptic_multigrid/elliptic-modes.ipynb
