--- a/content/_config.yml
+++ b/content/_config.yml
@@ -29,7 +29,7 @@ html:
   use_repository_button: true
   extra_footer: |
     <p>
-    &copy; 2021; CC-BY-NC-SA 4.0
+    &copy; 2021-2022; CC-BY-NC-SA 4.0
     <p>
 
 sphinx:
